Co-authored-by: ccolcleasure-eb <ccolcleasure-eb@users.noreply.github.com>

--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@
 }
 
 header {
-  background-image: url(/assets/truck.gif);
+  background-image: url(/assets/topImage.jpg);
   background-size: cover;
   padding-top: 32px;
   padding-bottom: 32px;
